--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 01:19:00 PM</p>
+    <p class="lastupdate">09/04/2020 01:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.887 inHg (-0.065)</td>
+        <td class="data">29.887 inHg (-0.066)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNE (22&#176;)</td>
+        <td class="data">5 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.2&#176;F</td>
+        <td class="data">78.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Waning gibbous<br/>
-            96%</td>
+            95%</td>
         </tr>
       </table>
     </div>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:18:34 PM">
-            95.9</span><br/>
+          <span title="01:20:06 PM">
+            96.2</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:18:34 PM" class="hival">
-            95.9</span>
+          <span title="01:20:06 PM" class="hival">
+            96.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="10:05:12 AM">
             56.7</span><br/>
-          <span title="01:10:12 PM">
-            44.7</span>
+          <span title="01:20:26 PM">
+            44.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:24:38 PM (Wednesday)">
@@ -249,8 +249,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/04/2020 01:10:12 PM">
-            44.7</span>
+          <span title="09/04/2020 01:20:26 PM">
+            44.2</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -271,20 +271,20 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="01:03:20 PM">
-            18</span>
+          <span title="01:20:24 PM">
+            17</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
             93</span><br/>
-          <span title="01:03:20 PM (Friday)">
-            18</span>
+          <span title="01:20:24 PM (Friday)">
+            17</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
             93</span><br/>
-          <span title="09/04/2020 01:03:20 PM">
-            18</span>
+          <span title="09/04/2020 01:20:24 PM">
+            17</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="01:04:42 PM">
-            9</span><br/>
-          285
+          <span title="01:21:52 PM">
+            10</span><br/>
+          15
         </td>
         <td class="data new_row hilo_week">
           <span title="04:15:00 PM (Monday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:13:02 PM">
-            78.2</span><br/>
+          <span title="01:20:02 PM">
+            78.3</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 22 hours, 32 minutes</td>
+      <td class="data">2 days, 22 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 22 hours, 32 minutes</td>
+      <td class="data">2 days, 22 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
